<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">BRLTTY</string>
  <string name="app_description">BRLTTY supports braille devices.</string>

  <string name="about_label_activity">About Application</string>
  <string name="about_label_name">Name</string>
  <string name="about_label_version">Version</string>
  <string name="about_label_copyright">Copyright</string>
  <string name="about_label_usage">Usage Details</string>
  <string name="about_label_privacy">Privacy Policy</string>

  <string name="inputService_name">BRLTTY Input Service</string>
  <string name="inputService_type">Keyboards on Braille Devices</string>
  <string name="inputService_not_enabled">input service not enabled</string>
  <string name="inputService_not_selected">input service not selected</string>
  <string name="inputService_not_started">input service not started</string>
  <string name="inputService_not_connected">input service not connected</string>

  <string name="updateApplication_problem_failed">application not updated</string>

  <string name="packageInstaller_problem_failed">package not installed</string>
  <string name="packageInstaller_problem_same">same version</string>
  <string name="packageInstaller_problem_downgrade">downgrade not allowed</string>

  <string name="fileDownloader_title">BRLTTY File Downloader</string>
  <string name="fileDownloader_problem_failed">file not downloaded</string>
  <string name="fileDownloader_state_connecting">connecting</string>
  <string name="fileDownloader_state_downloading">downloading</string>

  <string name="checkbox_state_unchecked">No</string>
  <string name="checkbox_state_checked">Yes</string>

  <string name="braille_channel_name">Braille Device State</string>
  <string name="braille_hint_tap">tap for actions</string>
  <string name="braille_state_released">Released</string>
  <string name="braille_state_waiting">Waiting</string>
  <string name="braille_state_connected">Connected</string>

  <string name="GLOBAL_BUTTON_NOTIFICATIONS">Notifications</string>
  <string name="GLOBAL_BUTTON_QUICK_SETTINGS">Quick Settings</string>
  <string name="GLOBAL_BUTTON_BACK">Back</string>
  <string name="GLOBAL_BUTTON_HOME">Home</string>
  <string name="GLOBAL_BUTTON_RECENT_APPS">Recent Apps</string>
  <string name="GLOBAL_BUTTON_OVERVIEW">Overview</string>

  <string name="GLOBAL_BUTTON_SWITCH_INPUT_METHOD">Switch Input Method</string>
  <string name="GLOBAL_BUTTON_VIEW_USER_GUIDE">View User Guide</string>
  <string name="GLOBAL_BUTTON_BROWSE_WEB_SITE">Browse Web Site</string>
  <string name="GLOBAL_BUTTON_BROWSE_COMMUNITY_MESSAGES">Browse Community Messages</string>
  <string name="GLOBAL_BUTTON_POST_COMMUNITY_MESSAGE">Post Community Message</string>
  <string name="GLOBAL_BUTTON_MANAGE_COMMUNITY_MEMBERSHIP">Manage Community Membership</string>

  <string name="GLOBAL_BUTTON_UPDATE_APPLICATION">Update Application</string>
  <string name="GLOBAL_CHECKBOX_DEVELOPER_BUILD">Developer Build</string>
  <string name="GLOBAL_CHECKBOX_ALLOW_DOWNGRADE">Allow Downgrade</string>

  <string name="CHOOSER_TITLE_ACCESSIBILITY_ACTIONS">Accessibility Actions</string>

  <string name="SETTINGS_SCREEN_MAIN">BRLTTY Settings</string>
  <string name="SETTINGS_SCREEN_GENERAL">General Settings</string>
  <string name="SETTINGS_SCREEN_MESSAGE">Message Settings</string>
  <string name="SETTINGS_SCREEN_DEVICES">Manage Devices</string>
  <string name="SETTINGS_SCREEN_ADVANCED">Advanced Settings</string>

  <string name="SETTINGS_CHECKBOX_RELEASE_BRAILLE_DEVICE">Release Braille Device</string>
  <string name="SETTINGS_BUTTON_NAVIGATION_MODE">Navigation Mode</string>
  <string name="SETTINGS_BUTTON_SPEECH_SUPPORT">Speech Support</string>

  <string name="SETTINGS_BUTTON_TEXT_TABLE">Text Table</string>
  <string name="SETTINGS_BUTTON_ATTRIBUTES_TABLE">Attributes Table</string>
  <string name="SETTINGS_BUTTON_CONTRACTION_TABLE">Contraction Table</string>
  <string name="SETTINGS_BUTTON_KEYBOARD_TABLE">Keyboard Table</string>

  <string name="SETTINGS_CHECKBOX_SHOW_ANNOUNCEMENTS">Show Announcements</string>
  <string name="SETTINGS_CHECKBOX_SHOW_NOTIFICATIONS">Show Notifications</string>
  <string name="SETTINGS_CHECKBOX_SHOW_TOASTS">Show Alerts</string>

  <string name="SETTINGS_BUTTON_LOG_LEVEL">Log Level</string>
  <string name="SETTINGS_BUTTON_LOG_CATEGORIES">Log Categories</string>
  <string name="SETTINGS_CHECKBOX_LOG_ACCESSIBILITY_EVENTS">Log Accessibility Events</string>
  <string name="SETTINGS_CHECKBOX_LOG_RENDERED_SCREEN">Log Rendered Screen</string>
  <string name="SETTINGS_CHECKBOX_LOG_KEYBOARD_EVENTS">Log Keyboard Events</string>
  <string name="SETTINGS_CHECKBOX_LOG_UNHANDLED_EVENTS">Log Unhandled Events</string>

  <string name="DEVICES_BUTTON_SELECTED">Selected Device</string>
  <string name="DEVICES_BUTTON_ADD">Add Device</string>
  <string name="DEVICES_BUTTON_REMOVE">Remove Device</string>

  <string name="SELECTED_DEVICE_NONE">no devices</string>
  <string name="SELECTED_DEVICE_UNSELECTED">device not selected</string>

  <string name="ADD_DEVICE_NAME">Device Name</string>
  <string name="ADD_DEVICE_METHOD">Communication Method</string>
  <string name="ADD_DEVICE_SELECT">Select Device</string>
  <string name="ADD_DEVICE_DRIVER">Braille Driver</string>
  <string name="ADD_DEVICE_DONE">Done</string>
  <string name="ADD_DEVICE_UNSELECTED_METHOD">communication method not selected</string>
  <string name="ADD_DEVICE_UNSELECTED_DEVICE">device not selected</string>
  <string name="ADD_DEVICE_UNSELECTED_DRIVER">braille driver not selected</string>
  <string name="ADD_DEVICE_NO_DEVICES">no devices</string>
  <string name="ADD_DEVICE_DUPLICATE_NAME">device name already in use</string>

  <string name="REMOVE_DEVICE_ASK">Would you really like to remove this device?</string>

  <string name="SET_SELECTION_NONE">none selected</string>
</resources>
