<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  >

  <TableRow>
    <TextView android:text="@string/about_label_name" />
    <TextView android:text="@string/app_name" />
  </TableRow>

  <TableRow>
    <TextView android:text="@string/about_label_version" />
    <TextView android:text="@string/app_version" android:id="@+id/application_version_value" />
  </TableRow>

  <TableRow>
    <TextView android:text="@string/about_label_copyright" />
    <TextView android:text="@string/PACKAGE_COPYRIGHT" />
  </TableRow>

  <Button
    android:text="@string/about_label_usage"
    android:onClick="showUsageDetails"
   />

  <Button
    android:text="@string/about_label_privacy"
    android:onClick="showPrivacyPolicy"
   />
</TableLayout>
