<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  >

  <Button
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/GLOBAL_BUTTON_SWITCH_INPUT_METHOD"
    android:onClick="switchInputMethod"
   />

  <Button
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/SETTINGS_SCREEN_MAIN"
    android:onClick="launchSettingsActivity"
   />

  <Button
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/GLOBAL_BUTTON_BROWSE_WEB_SITE"
    android:onClick="browseWebSite"
   />

  <Button
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/GLOBAL_BUTTON_POST_COMMUNITY_MESSAGE"
    android:onClick="postCommunityMessage"
   />
</LinearLayout>
